chore: init SessionTokenTest